add ports table

--- a/xrweb.html
+++ b/xrweb.html
@@ -26,10 +26,16 @@
 </div> <!-- end topheader -->
 <div class="pres">
   <table id="presence" class="pres">
-    <!-- <th>STATION</th><th>LINK</th><th>MSGS</th> -->
-    
+    <!-- station buttons are created and inserted here across the top of the document -->    
   </table>
 </div>  
+
+<div id="ports" class="portlist">
+<!-- add the station's list of port definitions here -->
+<table id="portstable" class="portstable">
+  <th>Port</th><th>Type</th><th>Descr</th><th>Baud</th><th>MHeard</th><th>L2</th><th>&nbsp;</th>
+</table>
+</div>
 
 <!-- start sidenav -->
 <div id="mySidenav" class="sidenav">
