--- a/xrweb.html
+++ b/xrweb.html
@@ -43,7 +43,7 @@
 	<a id="showtrace" onclick="showtracechanged();closeNav();">toggle messaging trace</a>
   <div>Station Callsign:<br/><input type="text" id="callsign" placeholder="Enter Station Callsign and SSID"></div>
   <div>Pass Phrase:<br/><input type="password" id="passphr" placeholder="Enter Pass Phrase"></div>
-	<a href="https://www.radcommsoft.com" onclick="alert('HFA Web, &copy;&nbsp;2021&nbsp;GrizzWorks, LLC\n\nAll Rights Reserved')">About HFA Web</a>
+	<a href="https://www.radcommsoft.com" onclick="alert('XRouter Web, &copy;&nbsp;2021&nbsp;GrizzWorks, LLC\n\nAll Rights Reserved')">About XRouter Web</a>
 	<a href="https://www.radcommsoft.com/contact" target="_blank">Contact</a>
 </div>
 <!-- end of the sidenav -->
