simplify CSS and load first station on page load

--- a/xrweb.html
+++ b/xrweb.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<link rel="stylesheet" href="css/w3.css" type="text/css">
 <link rel="stylesheet" href="css/sidenav.css" type="text/css">
 <link rel="stylesheet" href="css/xrweb.css" type="text/css">
 
@@ -23,7 +23,7 @@
 </div> <!-- end topheader -->
 
 <div class="pres">
-  <table id="presence" class="pres">
+  <table id="presence">
     <!-- station buttons are created and inserted here across the top of the document -->    
   </table>
 </div>  
@@ -48,7 +48,9 @@
     <!-- add the station's list of port definitions here -->
   </table>
 </div>
-
+<div id="trace" class="scroll">
+  
+</div>
 <!-- start sidenav -->
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
