--- a/xrweb.html
+++ b/xrweb.html
@@ -23,10 +23,8 @@
 <!-- start fixed header -->
 <div id="topheader" class="w3-container w3-teal">
   <!--<div style="display:inline-block;font-weight:bold;cursor:pointer;font-size:1.5em;" onclick="openNav();">&#9776;</div>-->
-  <span class="w3-cell w3-medium" onclick="openNav();">&nbsp;
-    &#9776;&nbsp;&nbsp;
-        <button class="w3-button w3-cell w3-red w3-round-xlarge" id="onlineInd" onclick="ctrlR();">MQTT</button>
-    <!--</div> <!-- end reload button and ESN, name -->
+  <button class="w3-button w3-medium w3-teal" onclick="openNav();">&#9776</button>
+  <button class="w3-button w3-red w3-round-xlarge" id="onlineInd" onclick="ctrlR();">MQTT</button>
 </div> <!-- end topheader -->
 
 <div class="pres">
