--- a/xrweb.html
+++ b/xrweb.html
@@ -23,7 +23,7 @@
 <!-- start fixed header -->
 <div id="topheader" class="w3-container w3-teal">
   <!--<div style="display:inline-block;font-weight:bold;cursor:pointer;font-size:1.5em;" onclick="openNav();">&#9776;</div>-->
-  <button class="w3-button w3-medium w3-teal" onclick="openNav();">&#9776</button>
+  <button class="w3-button w3-large w3-teal" onclick="openNav();">&#9776</button>
   <button class="w3-button w3-red w3-round-xlarge" id="onlineInd" onclick="ctrlR();">MQTT</button>
 </div> <!-- end topheader -->
 
@@ -36,13 +36,13 @@
 <div class="w3-panel w3-responsive">
   <table id="maintable" class="w3-table w3-striped w3-small">
   <tr class="w3-dark-grey"><th>Alias</th><th>Chat Call</th><th>Chat Alias</th><th>QTH</th><th>Locator</th><th>Latitude</th><th>Longitude</th></tr>
-  <tr><td>0</td><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td></tr>
+  <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
 </table>
 </div>
 <div class="w3-panel w3-responsive"><!--portstable fixed -->
   <table id="addresstable" class="w3-table w3-striped w3-small">
     <tr class="w3-dark-grey"><th>Contact</th><th>Comment</th><th>ampr IP</th><th>Version</th></tr>
-    <tr><td>0</td><td>1</td><td>2</td><td>3</td></tr>
+    <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
   </table>
 </div>
 <div class="w3-panel w3-responsive">
