start to integrate chat

--- a/xrweb.html
+++ b/xrweb.html
@@ -17,8 +17,8 @@
 <div class="w3-sidebar w3-teal w3-bar-block w3-border-right" style="display:none" id="mySidebar">
   <button onclick="closeNav()" class="w3-bar-item w3-large">Close &times;</button>
   <div>Pass Phrase:<br/><input type="password" id="passphr" placeholder="Enter Pass Phrase"></div>
-	<a href="#top" onclick="alert('XRouter Web, &copy;&nbsp;2023&nbsp;GrizzWorks, LLC\n\nAll Rights Reserved')">About XRouter Web</a>
-	<a href="https://www.radcommsoft.com/contact" target="_blank">Contact</a>
+	<p><a href="#top" onclick="alert('XRouter Web, &copy;&nbsp;2023&nbsp;GrizzWorks, LLC\n\nAll Rights Reserved')">About XRouter Web</a></p>
+	<p><a href="https://www.radcommsoft.com/contact" target="_blank">Contact</a></p>
 </div>
 <!-- start fixed header -->
 <div id="topheader" class="w3-bar w3-teal">
@@ -57,8 +57,8 @@
 </div>
 <!-- end main pane -->
 <!-- chat pane -->
-<div id="chat" class="w3-panel w3-teal tabswitch" style="display:none">
-  <p id="chattrace" class="w3-container w3-dark-grey w3-monospace w3-small">chat pane</p>
+<div id="chat" class="w3-container w3-dark-grey tabswitch" style="display:none">
+  <p id="chattrace" class="w3-container w3-monospace w3-small"></p>
 </div>
 <!-- end chat pane -->
 
