add callsign entrty in sidebar

--- a/xrweb.html
+++ b/xrweb.html
@@ -15,6 +15,7 @@
   <!-- Sidebar -->
 <div class="w3-sidebar w3-teal w3-bar-block w3-border-right" style="display:none" id="mySidebar">
   <button onclick="closeNav()" class="w3-bar-item w3-large">Close &times;</button>
+  <div>Pass Phrase:<br/><input type="text" id="mycall" placeholder="Enter Call Sign"></div>
   <div>Pass Phrase:<br/><input type="password" id="passphr" placeholder="Enter Pass Phrase"></div>
 	<p><a href="#top" onclick="alert('XRouter Web, &copy;&nbsp;2023&nbsp;GrizzWorks, LLC\n\nAll Rights Reserved')">About XRouter Web</a></p>
 	<p><a href="https://www.radcommsoft.com/contact" target="_blank">Contact</a></p>
