--- a/xrweb.html
+++ b/xrweb.html
@@ -60,20 +60,21 @@
 
 <!-- chat pane -->
 <div id="chat" class="w3-container w3-responsive w3-mobile tabswitch">
-  <div id="chattrace" class="w3-container w3-dark-grey w3-monospace w3-small" style="min-height:300px;">hello world</div>  
-  <div class="w3-row w3-teal w3-bottom">
-     <div class="w3-quarter w3-container w3-teal">
+  <div id="chattrace" class="w3-container w3-dark-grey w3-monospace w3-small" style="min-height:450px;overflow-y: scroll;">hello world</div>  
+  <div class="w3-row w3-teal w3-bottom w3-teal">
+     <div class="w3-quarter w3-container">
        <span class="">Room&nbsp;</span>
-       <input type="text" id="dest" style="width:75%;">
+       <input type="text" id="dest" style="width:85%;">
      </div>
-     <div class="w3-threequarter w3-teal w3-container">
+     <div class="w3-threequarter w3-container">
       <span class="">Text&nbsp;</span><br>
-      <textarea class="w3-half" id="tosend" type="text" style="width:80%;"></textarea>
+      <textarea class="w3-half" id="tosend" type="text" style="min-height:85px;width:80%;"></textarea>
       <button class="w3-button w3-border w3-blue" id="chatsend" onclick="sendChat('1234', document.getElementById('tosend').value);">SEND</button>
      </div>      
-     <div class="w3-panel w3-padding-small w3-dark-grey">&nbsp;</div>
+     <div class="w3-container w3-padding w3-row">&nbsp;</div>  
    </div>   
-  </div>
+   
+</div>
 <!-- end chat pane -->
 </body>
 </html>
