--- a/xrweb.html
+++ b/xrweb.html
@@ -60,7 +60,7 @@
 
 <!-- chat pane -->
 <div id="chat" class="w3-container w3-responsive w3-mobile tabswitch">
-  <div id="chattrace" class="w3-container w3-dark-grey w3-monospace w3-small" style="overflow-y: scroll;">hello world</div>  
+  <div id="chattrace" class="w3-container w3-dark-grey w3-monospace w3-small" style="overflow-y: scroll;"></div>  
   <div class="w3-row w3-teal w3-bottom w3-teal">
      <div class="w3-quarter w3-container">
        <span class="">Room&nbsp;</span>
@@ -69,7 +69,8 @@
      <div class="w3-threequarter w3-container">
       <span class="">Text&nbsp;</span><br>
       <textarea class="w3-half" id="tosend" type="text" style="min-height:85px;width:80%;"></textarea>
-      <button class="w3-button w3-border w3-blue" id="chatsend" onclick="sendChat('1234', document.getElementById('tosend').value);">SEND</button>
+      <button class="w3-button w3-border w3-blue w3-monospace" id="chatsend" onclick="sendChat('1234', document.getElementById('tosend').value);">&nbsp;SEND</button>
+      <button class="w3-button w3-border w3-blue w3-monospace" onclick="document.getElementById('chattrace').innerHTML = '';">CLEAR</button>
      </div>      
      <div class="w3-container w3-rest w3-padding">&nbsp;</div>  
    </div>      
