--- a/xrweb.html
+++ b/xrweb.html
@@ -51,7 +51,7 @@
     </table>
   </div>
   <!-- hide/show trace pane -->
-  <button onclick="hideShowTrace('tracediv');" class="w3-button w3-block w3-grey w3-left-align">
+  <button id="toggletrace" onclick="hideShowTrace('tracediv');" class="w3-button w3-block w3-grey w3-left-align">
     Hide/Show Trace</button>
   <div id="tracediv" class="w3-panel w3-dark-grey w3-border w3-responsive w3-hide w3-mobile;" style="resize:vertical;">
     <p id="trace" class="w3-container w3-monospace w3-small" style="height:100%;min-height:100px;"></p>
@@ -69,7 +69,7 @@
      <div class="w3-threequarter w3-container">
       <span class="">Text&nbsp;</span><br>
       <textarea class="w3-half" id="tosend" type="text" style="min-height:85px;width:80%;"></textarea>
-      <button class="w3-button w3-border w3-blue w3-monospace" id="chatsend" onclick="sendChat('1234', document.getElementById('tosend').value);">&nbsp;SEND</button>
+      <button class="w3-button w3-border w3-blue w3-monospace" id="chatsend" onclick="sendChat(document.getElementById('dest').value, document.getElementById('tosend').value);">&nbsp;SEND</button>
       <button class="w3-button w3-border w3-blue w3-monospace" onclick="document.getElementById('chattrace').innerHTML = '';">CLEAR</button>
      </div>      
      <div class="w3-container w3-rest w3-padding">&nbsp;</div>  
