--- a/xrweb.html
+++ b/xrweb.html
@@ -16,6 +16,7 @@
 <div class="w3-sidebar w3-teal w3-bar-block w3-border-right" style="display:none" id="mySidebar">
   <button onclick="closeNav()" class="w3-bar-item w3-large">Close &times;</button>
   <div>My Call Sign:<br/><input type="text" id="mycall" placeholder="Enter Call Sign"></div>
+  <div>My Chat Name:<br/><input type="text" id="myname" placeholder="Enter Chat Name"></div>
   <div>Pass Phrase:<br/><input type="password" id="passphr" placeholder="Enter Pass Phrase"></div>
 	<p><a href="#top" onclick="alert('XRouter Web, &copy;&nbsp;2023&nbsp;GrizzWorks, LLC\n\nAll Rights Reserved')">About XRouter Web</a></p>
 	<p><a href="https://www.radcommsoft.com/contact" target="_blank">Contact</a></p>
