--- a/xrweb.html
+++ b/xrweb.html
@@ -87,13 +87,13 @@
       <button class="w3-btn w3-purple" onclick="document.getElementById('chattrace').innerHTML = '';">Clear</button>
     </div>
     <div class="w3-container w3-teal w3-cell w3-responsive w3-mobile w3-padding-small">
-    <label>Channel</label><br>
+      <label>Channel</label><br>
       <input id="dest" type="text" style="width:4em;">
     </div>
     
     <div class="w3-container w3-teal w3-cell w3-responsive w3-mobile w3-padding-small">
       <label>Chat Text</label>
-      <input id="tosend" type="text"  style="min-width:20em;">
+      <input id="tosend" type="text" style="min-width:20em;max-width:40em;">
     </div>
     <div class="w3-container w3-padding-small w3-teal w3-cell w3-responsive w3-mobile">
       <button class="w3-btn w3-purple" onclick="
