modify chat text label with current node callsign

--- a/xrweb.html
+++ b/xrweb.html
@@ -75,7 +75,7 @@
     </div>
     
     <div class="w3-container w3-teal w3-cell w3-responsive w3-mobile w3-padding-small">
-      <label>Chat Text</label>      
+      <label id="chattextlabel">Chat Text via ?</label>      
       <input id="tosend" type="text" style="min-width:23em;max-width:40em;">
     </div>
 
